Add new fields and methods to product-related entities and stores